<resources>
    <string name="app_name">Theatre</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="theatre">Theatre</string>
    <string name="log_out">Log out</string>
    <string name="descripton">Descripton</string>
    <string name="view">View</string>
</resources>